2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* dbcontrol.sh: Make this script work when the current directory isn't
	the directory of the script. When starting a database, make it wait
	until the database has started, and when stopping stop asap.

2009-10-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Move table declarations around so that we don't
	reference tables which haven't been created yet. Also fix a syntax typo.

2009-09-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add a new field, endtime to RevisionWork to be able to
	sort lanes according to how long time they've been waiting for work
	to be done.

2009-06-11  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* moonbuilder-clean-tmp.sh: Update with new files
	created by moonlight.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Store revision logs and diffs as files.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add support for storing files outside of 
	the database.

2009-06-03  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Update comment about roles.

2009-04-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* updatemono.sh: Added script to have a parallel mono for the
	  buildbot.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add support for disabling hosts.

2009-04-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile:
	* database.sql: Add support for deletion directives.

2009-04-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add a dependency_host_id to lane dependencies,
	  to specify the host the lane must have succeeded on.

2009-04-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* database.sql: Add support for downloading dependencies to a
	  directory on the buildbot when the bot starts working on a
	  new revision.

2009-04-20  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* moonbuilder-clean-tmp.sh: Added.
